--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <html>
   <head>
     <title>0h h1</title>
-    <meta name="description" content="A little logic game by Q42." />
+    <meta name="description" content="A little logic game." />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
     <meta name="format-detection" content="telephone=no">
 
@@ -46,7 +46,7 @@
 
                 </div>
                 <p>
-                    a little logic game<br>by Q42
+                    a little logic game
                 </p>
             </div>
         </div>
@@ -70,18 +70,11 @@
             <div class="vertical">
             <h3>About</h3>
             <p>
-            0h h1 is a little logic game<br>
-            by Q42.<br>
-            <br>
-            It was created by<br>
-            Martin Kool.<br>
+            0h h1 is a little logic game
             <br>
             The concept is also known<br>
             as Takuzu or Binairo.<br>
             <br>
-            (c) 2014<br>
-            www.q42.com
-            </p>
             </div>
         </div>
 
