--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Tap Tap Tap - Open source tapping game built with Javascript</title>
+	<title>Tap Tap Tap </title>
 	<meta name="description" content="Open source tapping game built with Javascript"/>
 	<link href="style.css" rel="stylesheet">
 	<meta charset="UTF-8">
@@ -11,19 +11,19 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
 
 	<!-- favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/favicons/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/favicons/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="/favicons/manifest.json">
-	<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#0b1d31">
-	<link rel="shortcut icon" href="/favicons/favicon.ico">
-	<meta name="msapplication-config" content="/favicons/browserconfig.xml">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="favicons/manifest.json">
+	<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#0b1d31">
+	<link rel="shortcut icon" href="favicons/favicon.ico">
+	<meta name="msapplication-config" content="favicons/browserconfig.xml">
 	<meta name="theme-color" content="#0b1d31">
 
 	<!-- OG Details -->
 	<meta property="og:title" content="TapTapTap" />
 	<meta property="og:description" content="Open source tapping game built with Javascript" />
-	<meta property="og:site_name" content="TapTapTap - Open source tapping game built with Javascript" />
+	<meta property="og:site_name" content="TapTapTap " />
 	<meta property="og:type" content="website" />
 
 </head>
@@ -37,9 +37,6 @@
 			</label>
 			<label class="vzbltyLabel" for="gameMenuPageToggle">
 				<input type="radio" name="pT" class="toggleCheckbox" id="gameMenuPageToggle" checked="checked">Game Menu Page
-			</label>
-			<label class="vzbltyLabel" for="aboutPageToggle">
-				<input type="radio" name="pT" class="toggleCheckbox" id="aboutPageToggle">About Page
 			</label>
 			<label class="vzbltyLabel" for="highScorePageToggle">
 				<input type="radio" name="pT" class="toggleCheckbox" id="highScorePageToggle">High Score Page
@@ -87,8 +84,6 @@
 					<h2 class="gm-menu-subtitle">Every Tap Matters</h2>
 				</div>
 				<button id="newGameBtn" class="gm-btn btn-blue" type="button" name="button">New Game</button>
-				<!-- <button id="highScoresBtn" class="gm-btn" type="button" name="button">Best Score</button> -->
-				<button id="aboutBtn" class="gm-btn" type="button" name="button">About</button>
 			</div>
 		</div>
 
@@ -198,8 +193,6 @@
 				<div class="info-screen-txt-cont">
 					<div class="info-screen-body-txt-reg">Score</div>
 					<div id="lvlLostScore" class="lvl-fnshd-score-nmb">746</div>
-					<!-- <div class="info-screen-body-txt-reg">Best Score</div>
-					<div id="lvlLostBestScore" class="lvl-fnshd-score-nmb">146</div> -->
 				</div>
 				<div class="sbmt-tryagain-txt">Try again?</div>
 				<div id="lvlLostTryAgainBtn" class="tpbl-circle c-white submit-circle"></div>
