--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="description" content="The Pond, swim free fish, swim free." />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <style>
     body {
