--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Floppy Bird</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="Nebez Briefkani" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <meta
       name="description"
       content="play floppy bird. a remake of popular game flappy bird built in html/css/js"
@@ -23,12 +24,6 @@
       property="og:description"
       content="play floppy bird. a remake of popular game flappy bird built in html/css/js"
     />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://nebezb.com/floppybird/assets/thumb.png"
-    />
-    <meta property="og:url" content="https://nebezb.com/floppybird/" />
     <meta property="og:site_name" content="Floppy Bird" />
 
     <!-- Style sheets -->
