--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       media="screen and (max-device-width:800px)"
     />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
