--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Push down all the blocks in the minimum number of moves. Exciting? Hoo boy, you bet your sweet granddaddy it is."
     />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
