--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       property="og:description"
       content="Pac-Man game written in HTML5 + CSS3 + jQuery with Canvas. This WebApp is a Responsive Web Design (RWD) website."
     />
-    <meta property="og:title" content="Lucio PANEPINTO - Pac-Man" />
+    <meta property="og:title" content="Pac-Man" />
 
     <meta
       name="viewport"
@@ -17,12 +17,12 @@
     />
     <meta
       name="keywords"
-      content="pacman, pac-man, pac-man online, pacman online, online, online games, games, free, puzzle, lucio panepinto, lucio, panepinto, html, html5, css, css3, javascript, jquery, rwd, responsive, responsive web design, responsive web, web design, canvas, draw"
+      content="pacman, pac-man, pac-man online, pacman online, online, online games, games, free, puzzle, html, html5, css, css3, javascript, jquery, rwd, responsive, responsive web design, responsive web, web design, canvas, draw"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <link rel="stylesheet" type="text/css" href="css/pacman.css" />
     <link rel="stylesheet" type="text/css" href="css/pacman-home.css" />
 
@@ -193,7 +193,7 @@
       });
     </script>
 
-    <title>Lucio PANEPINTO - Pac-Man</title>
+    <title>Pac-Man</title>
   </head>
 
   <body>
@@ -232,7 +232,6 @@
 
     <div id="home">
       <h1>pac-man</h1>
-      <h3>Lucio PANEPINTO<br /><em>2015</em></h3>
       <canvas id="canvas-home-title-pacman"></canvas>
       <div id="presentation">
         <div id="presentation-titles">character &nbsp;/&nbsp; nickname</div>
@@ -257,8 +256,8 @@
       <a
         class="github"
         target="_blank"
-        href="https://github.com/luciopanepinto/pacman"
-        ><img src="img/github.png" alt="GitHub - Lucio PANEPINTO - Pac-Man"
+        href=""
+        ><img src="" alt=""
       /></a>
     </div>
 
