--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#fff" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0,
