Updated the code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Elastic Face</title>
     <link rel="stylesheet" href="app.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link rel="manifest" href="./site.webmanifest" />
   </head>
   <body>
     <script type="text/template" id="loading-template">
@@ -19,11 +23,6 @@
           <div id="quality-label">Quality</div>
           <div class="quality" id="quality-medium">Medium</div>
           <div class="quality" id="quality-high">High</div>
-      </div>
-
-      <div id="credits">
-          <div>Created by <a href="mike viana" target="_blank">mike</a></div>
-          <div>Audio by <a href="mike viana" target="_blank">mike</a></div>
       </div>
     </script>
     <div id="placeholder"></div>
