Updated the code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         var canvas = document.querySelector("#unity-canvas");
         var config = {
           dataUrl: "PacMan-HTML.data.gz",
-          frameworkUrl: "PacMan-HTML.framework.js.gz",
+          frameworkUrl: "PacMan-HTML.framework.js",
           codeUrl: "PacMan-HTML.wasm.gz",
           streamingAssetsUrl: "StreamingAssets",
           companyName: "DefaultCompany",
