--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Time Sphere – Netal</title>
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="stylesheet" href="TemplateData/style.css" />
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Time Sphere.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate(
+        "unityContainer",
+        "Build/Time Sphere.json",
+        {
+          onProgress: UnityProgress,
+        }
+      );
     </script>
   </head>
-  <body style="background-color:#f4f4f4;color:#000000;">
+
+  <body style="background-color: #f4f4f4; color: #000000">
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 540px"></div>
       <div class="footer">
@@ -19,4 +26,5 @@
         <div class="title">Fullscreen</div>
       </div>
     </div>
+  </body>
 </html>
