--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Adventure Drivers</title>
-    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -240,7 +243,13 @@
     </style>
   </head>
   <body>
-    <canvas id="gamecanvas" draggable="false" width="640" height="360" style="touch-action: none; width: 640px; height: 360px; cursor: inherit;"></canvas>
+    <canvas
+      id="gamecanvas"
+      draggable="false"
+      width="640"
+      height="360"
+      style="touch-action: none; width: 640px; height: 360px; cursor: inherit"
+    ></canvas>
     <script src="AdventureDrivers.min.js" type="text/javascript"></script>
   </body>
 </html>
