--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Cluster Rush | 3kh0</title>
-    <link rel="icon" href="./icon.jpg">
+    <link rel="icon" href="./icon.jpg" />
     <style>
       /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
     </style>
   </head>
   <body>
-    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="480px" width="640px"></canvas>
+    <canvas
+      class="emscripten"
+      id="canvas"
+      oncontextmenu="event.preventDefault()"
+      height="480px"
+      width="640px"
+    ></canvas>
     <script type="text/javascript">
       var Module = {
         TOTAL_MEMORY: 268435456,
@@ -23,7 +29,7 @@
         asmUrl: "Release/NG.asm.js",
         memUrl: "Release/NG.mem",
       };
-      console.log("If the file NG.mem returns a 404 error, that is ok!")
+      console.log("If the file NG.mem returns a 404 error, that is ok!");
     </script>
     <script src="Release/UnityLoader.js"></script>
     <script src="/js/main.js"></script>
