Updated the code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Cluster Rush | 3kh0</title>
+    <title>Cluster Rush</title>
     <link rel="icon" href="./icon.jpg" />
     <style>
       /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
@@ -32,6 +32,5 @@
       console.log("If the file NG.mem returns a 404 error, that is ok!");
     </script>
     <script src="Release/UnityLoader.js"></script>
-    <script src="/js/main.js"></script>
   </body>
 </html>
