--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Color Switch 2: Challenges</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Color Switch</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <style>
       /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
 
       * {
-          box-sizing: border-box;
+        box-sizing: border-box;
       }
 
       body {
@@ -36,10 +36,10 @@
 
       .canvas-container-outer {
         position: absolute;
-        top:0;
-        left:0;
-        right:0;
-        bottom:0;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
       }
 
       .canvas-container {
@@ -62,22 +62,22 @@
         margin-bottom: 24px;
         overflow: hidden;
         border-radius: 2px;
-        background-color: #F7F7F7;
+        background-color: #f7f7f7;
         box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
       }
 
       .progress-bar {
-          float: left;
-          width: 0;
-          min-width: 2%;
-          height: 100%;
-          font-size: 20px;
-          font-family: monospace;
-          line-height: 28px;
-          color: #AAA;
-          text-align: center;
-          transition: width .1s ease;
-          background-color: #292929;
+        float: left;
+        width: 0;
+        min-width: 2%;
+        height: 100%;
+        font-size: 20px;
+        font-family: monospace;
+        line-height: 28px;
+        color: #aaa;
+        text-align: center;
+        transition: width 0.1s ease;
+        background-color: #292929;
       }
 
       .touchLayer {
@@ -90,102 +90,125 @@
     </style>
   </head>
   <body>
-  
     <div id="canvas-container-outer" class="canvas-container-outer">
       <div id="canvas-container" class="canvas-container">
         <!-- onclick="void(0)" -->
-        <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" ></canvas>
+        <canvas
+          class="emscripten"
+          id="canvas"
+          oncontextmenu="event.preventDefault()"
+        ></canvas>
         <div id="progress" class="progress">
           <div id="progress-bar" class="progress-bar" style="width: 0%">0%</div>
         </div>
       </div>
     </div>
 
-
-    <script type='text/javascript'>
-
+    <script type="text/javascript">
       // connect to canvas
       var Module = {
         preRun: [],
         postRun: [],
-        print: function() {
-            console.log(Array.prototype.slice.call(arguments).join(" "));
+        print: function () {
+          console.log(Array.prototype.slice.call(arguments).join(" "));
         },
-        printErr: function() {
-            console.warn(Array.prototype.slice.call(arguments).join(" "));
+        printErr: function () {
+          console.warn(Array.prototype.slice.call(arguments).join(" "));
         },
-        canvas: document.getElementById('canvas'),
+        canvas: document.getElementById("canvas"),
         totalDependencies: 0,
-        monitorRunDependencies: function(left) {
+        monitorRunDependencies: function (left) {
           this.totalDependencies = Math.max(this.totalDependencies, left);
           //console.log('Downloading...', (100*(this.totalDependencies-left)/this.totalDependencies) + '%');
           //console.log(Module);
           // console.log('monitorRunDependencies', left ? 'Preparing... (' + (this.totalDependencies-left) + '/' + this.totalDependencies + ')' : 'All downloads complete.');
-        }
-      }
+        },
+      };
 
-
-      window.addEventListener("keydown", function(e) {
-        // space and arrow keys
-        if([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) {
+      window.addEventListener(
+        "keydown",
+        function (e) {
+          // space and arrow keys
+          if ([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) {
             e.preventDefault();
-        }
-      }, false);
+          }
+        },
+        false
+      );
 
-      function addEvent(elementId, evnt, funct){
+      function addEvent(elementId, evnt, funct) {
         var element = document.getElementById(elementId);
-        if (element.attachEvent)
-          return element.attachEvent('on'+evnt, funct);
-        else
-          return element.addEventListener(evnt, funct, false);
+        if (element.attachEvent) return element.attachEvent("on" + evnt, funct);
+        else return element.addEventListener(evnt, funct, false);
       }
- 
 
-      function setupCanvasTouchEvents(){
+      function setupCanvasTouchEvents() {
         var canvas = document.getElementById("canvas");
         var el = document.getElementById("canvas"); // "touch"
-        function adjustX(x){
-          return x * canvas.width / parseInt(getComputedStyle(el).width, 10);
+        function adjustX(x) {
+          return (x * canvas.width) / parseInt(getComputedStyle(el).width, 10);
         }
-        function adjustY(y){
-          return y * canvas.height / parseInt(getComputedStyle(el).height, 10);
+        function adjustY(y) {
+          return (
+            (y * canvas.height) / parseInt(getComputedStyle(el).height, 10)
+          );
         }
 
-        el.addEventListener("touchstart", function(evt){
-          evt.preventDefault();
-          var touches = evt.changedTouches;
-          for(var i=0; i<touches.length; i++){
-            var touch = touches[i];
-            //console.log('_pInput_TouchStart', _pInput_TouchStart);
-            _pInput_TouchStart(touch.identifier%10, adjustX(touch.clientX), adjustY(touch.clientY));
-          }
-        }, false);
-        el.addEventListener("touchend", function(evt){
-          evt.preventDefault();
-          var touches = evt.changedTouches;
-          for(var i=0; i<touches.length; i++){
-            var touch = touches[i];
-            _pInput_TouchEnd(touch.identifier%10);
-          }
-        }, false);
-        el.addEventListener("touchmove", function(evt){
-          evt.preventDefault();
-          var touches = evt.changedTouches;
-          for(var i=0; i<touches.length; i++){
-            var touch = touches[i];
-            _pInput_TouchMove(touch.identifier%10, adjustX(touch.clientX), adjustY(touch.clientY));
-          }
-        }, false);
+        el.addEventListener(
+          "touchstart",
+          function (evt) {
+            evt.preventDefault();
+            var touches = evt.changedTouches;
+            for (var i = 0; i < touches.length; i++) {
+              var touch = touches[i];
+              //console.log('_pInput_TouchStart', _pInput_TouchStart);
+              _pInput_TouchStart(
+                touch.identifier % 10,
+                adjustX(touch.clientX),
+                adjustY(touch.clientY)
+              );
+            }
+          },
+          false
+        );
+        el.addEventListener(
+          "touchend",
+          function (evt) {
+            evt.preventDefault();
+            var touches = evt.changedTouches;
+            for (var i = 0; i < touches.length; i++) {
+              var touch = touches[i];
+              _pInput_TouchEnd(touch.identifier % 10);
+            }
+          },
+          false
+        );
+        el.addEventListener(
+          "touchmove",
+          function (evt) {
+            evt.preventDefault();
+            var touches = evt.changedTouches;
+            for (var i = 0; i < touches.length; i++) {
+              var touch = touches[i];
+              _pInput_TouchMove(
+                touch.identifier % 10,
+                adjustX(touch.clientX),
+                adjustY(touch.clientY)
+              );
+            }
+          },
+          false
+        );
       }
 
       var progressBar = document.getElementById("progress-bar");
-      var interval = setInterval(function(){
-        if(Module.dataFileDownloads && Module.dataFileDownloads["game.data"]){
+      var interval = setInterval(function () {
+        if (Module.dataFileDownloads && Module.dataFileDownloads["game.data"]) {
           var data = Module.dataFileDownloads["game.data"];
           //console.log(data.loaded, '/', data.total)
-          var percent = Math.round(data.loaded*100 / data.total);
-          progressBar.style.width = percent + '%';
-          progressBar.innerHTML = percent + '%';
+          var percent = Math.round((data.loaded * 100) / data.total);
+          progressBar.style.width = percent + "%";
+          progressBar.innerHTML = percent + "%";
           if (data.loaded >= data.total) {
             document.getElementById("progress").style.display = "none";
             document.getElementById("canvas").className += " visible";
@@ -200,7 +223,7 @@
        Note that we don't update the canvas: the rendering engine seems to treat its default dimensions 540x720 as magic numbers,
        so we'll let the default scaling do its magic.
        */
-      var resizingCallback = function(e) {
+      var resizingCallback = function (e) {
         var containerOuter = document.getElementById("canvas-container-outer");
         var container = document.getElementById("canvas-container");
 
@@ -224,9 +247,7 @@
 
       window.addEventListener("resize", resizingCallback);
       resizingCallback(null);
-
     </script>
     <script async type="text/javascript" src="game.js"></script>
-
-</body>
+  </body>
 </html>
