Updated the code

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
   <head>
     <title>Drift Boss</title>
     <link
-      rel="icon"
-      type="image/x-icon"
-      href="/media/graphics/misc/favicon.ico"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/media/graphics/misc/apple-touch-icon.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/media/graphics/misc/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/media/graphics/misc/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/media/graphics/misc/site.webmanifest" />
+
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
     <meta
