Formatted the code

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Core Ball</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas style="display: none;" id="stage"></canvas>
+    <canvas style="display: none" id="stage"></canvas>
     <div id="begin">
       <section class="center-box">
         <span class="title">Core Ball</span>
