Updated the code

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Cars Simulator</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link rel="manifest" href="./site.webmanifest" />
     <link href="shared/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="TemplateData56/style.css" />
     <script src="TemplateData56/UnityProgress.js"></script>
     <link rel="icon" href="TemplateData/favicon.ico" />
     <script src="Build/UnityLoader.js"></script>
-    <script src="/js/main.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate(
         "gameContainer",
