Updated the code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Townscaper</title>
     <link rel="icon" href="TemplateData/favicon.ico" />
     <link rel="stylesheet" href="TemplateData/style.css" />
-    <script type="application/javascript" src="/js/main.js"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
@@ -28,7 +27,7 @@
         frameworkUrl: buildUrl + "/WebGL.framework.js",
         codeUrl: buildUrl + "/WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "3kh0",
+        companyName: "Arcade",
         productName: "Townscaper",
         productVersion: "0.23",
       };
