--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Scrap Metal 3 Infernal Trap</title>
-    <link rel="shortcut icon" href="img/utka.ico">
-    <link rel="icon" href="img/utka.ico">
-    <link rel="stylesheet" href="zombies11.css">
+    <link rel="shortcut icon" href="img/utka.ico" />
+    <link rel="icon" href="img/utka.ico" />
+    <link rel="stylesheet" href="zombies11.css" />
     <script src="utkaUnityProgress.js"></script>
     <script src="scrapUnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "ScrapMetal3.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate(
+        "unityContainer",
+        "ScrapMetal3.json",
+        { onProgress: UnityProgress }
+      );
     </script>
   </head>
   <body>
