Updated the code

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Scrap Metal 3 Infernal Trap</title>
-    <link rel="shortcut icon" href="img/utka.ico" />
-    <link rel="icon" href="img/utka.ico" />
+    <title>Scrap Metal 3</title>
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="img/site.webmanifest" />
     <link rel="stylesheet" href="zombies11.css" />
     <script src="utkaUnityProgress.js"></script>
     <script src="scrapUnityLoader.js"></script>
@@ -23,9 +40,8 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Scrap Metal 3 Infernal Trap</div>
+        <div class="title">Scrap Metal 3</div>
       </div>
     </div>
-    <script src="/js/main.js"></script>
   </body>
 </html>
