--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
     <script src="/js/main.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "game.json");
-      alert("Make sure you give this game time to load, it takes some time. If it takes more than 5 minutes, refresh the page!");
+      alert(
+        "Make sure you give this game time to load, it takes some time. If it takes more than 5 minutes, refresh the page!"
+      );
     </script>
   </head>
-  <body style="margin: 0; overflow: hidden;">
-    <div class="webgl-content" style="width: 100%; height: 100%; overflow: hidden;">
-      <div id="gameContainer" style="width: 100%; height: 100%; overflow: hidden;"></div>
+  <body style="margin: 0; overflow: hidden">
+    <div
+      class="webgl-content"
+      style="width: 100%; height: 100%; overflow: hidden"
+    >
+      <div
+        id="gameContainer"
+        style="width: 100%; height: 100%; overflow: hidden"
+      ></div>
     </div>
   </body>
 </html>
