--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="img/logo.jpg" />
     <script src="js/UnityLoader.js"></script>
-    <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "game.json");
-      alert(
-        "Make sure you give this game time to load, it takes some time. If it takes more than 5 minutes, refresh the page! Also multiplayer is disabled"
-      );
-    </script>
   </head>
   <body style="margin: 0; overflow: hidden">
     <div
@@ -24,5 +18,16 @@
         style="width: 100%; height: 100%; overflow: hidden"
       ></div>
     </div>
+    <div id="popup" class="popup">
+      <div class="popup-content">
+        <h2 id="popup-title" style="color: blue"></h2>
+        <p id="popup-message" style="color: green"></p>
+        <div class="popup-buttons">
+          <button id="yesButton" class="popup-button">Yes</button>
+          <button id="noButton" class="popup-button">No</button>
+        </div>
+      </div>
+    </div>
+    <script src="js/popup.js"></script>
   </body>
 </html>
