--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       $script.ready("modules", function () {
         $script("main.js", function () {
           $script("bindings.js", function () {
-            $script("http://cdn.kik.com/cards/0.11.3/cards.js", function () {
+            $script("cards.js", function () {
               // done
             });
           });
