Updated the code

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <p class="game-explanation">
         <strong class="important">How to play:</strong> Use your
-        <strong>arrow keys</strong> to move the tiles. When two tiles with the
+        <strong>arrow keys</strong> or <strong>swipe if mobile</strong> to move the tiles. When two tiles with the
         same number touch, they <strong>merge into one!</strong>
       </p>
     </div>
