--- a/index.html
+++ b/index.html
@@ -1,102 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="./build/MainGame.module.js"></script>
+    <title>3D.CITY</title>
+  </head>
+  <body>
+    <div id="container"></div>
+    <div id="hub"></div>
+    <object id="loader" type="image/svg+xml" data="assets/loader.svg"></object>
 
-<head>
-	<title>3D.CITY</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<link rel="icon" href="favicon.ico" />
-	<style>
-		* {
-			padding: 0;
-			margin: 0;
-			-o-user-select: none;
-			-ms-user-select: none;
-			-khtml-user-select: none;
-			-webkit-user-select: none;
-			-moz-user-select: none;
-		}
-
-		html {
-			width: 100%;
-			height: 100%;
-		}
-
-		body {
-			background: #8397ac;
-			font: 10px sans-serif;
-			width: 100%;
-			height: 100%;
-			color: #FFFFFF;
-			overflow: hidden;
-		}
-
-		#container {
-			min-width: 465px;
-			min-height: 465px;
-			width: 100%;
-			height: 100%;
-			overflow: hidden;
-			text-align: center;
-		}
-
-		#container canvas {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%
-		}
-
-		#debug {}
-
-		#hub {
-			position: absolute;
-			top: 0;
-			left: 0;
-			height: 100%;
-			width: 100%;
-			pointer-events: none;
-			display: block;
-			text-align: center;
-		}
-
-		a:link {
-			text-decoration: none;
-			color: #FFAA66;
-		}
-
-		a:visited {
-			text-decoration: none;
-			color: #FFAA66;
-		}
-
-		a:active {
-			text-decoration: none;
-			color: #FFAA66;
-		}
-
-		a:hover {
-			text-decoration: underline;
-			color: red;
-		}
-	</style>
-</head>
-
-<script type="module">
-
-	import { Main } from './build/MainGame.module.js';
-
-	Main.init()
-
-</script>
-
-<div id="container"></div>
-<div id="hub"></div>
-<object id="loader" type="image/svg+xml" data="assets/loader.svg"></object>
-
-
-
-</body>
-
+    <div id="popup" class="popup">
+      <div class="popup-content">
+        <h2 id="popup-title" style="color: blue"></h2>
+        <p id="popup-message" style="color: green"></p>
+        <div class="popup-buttons">
+          <button id="yesButton" class="popup-button">Yes</button>
+          <button id="noButton" class="popup-button">No</button>
+        </div>
+      </div>
+    </div>
+    <script src="popup.js"></script>
+  </body>
 </html>
