--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>3D.CITY</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -8,24 +9,27 @@
     />
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="./build/MainGame.module.js"></script>
-    <title>3D.CITY</title>
   </head>
-  <body>
-    <div id="container"></div>
-    <div id="hub"></div>
-    <object id="loader" type="image/svg+xml" data="assets/loader.svg"></object>
 
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
+  <script type="module">
+    import { Main } from "./build/MainGame.module.js";
+
+    Main.init();
+  </script>
+
+  <div id="container"></div>
+  <div id="hub"></div>
+  <object id="loader" type="image/svg+xml" data="assets/loader.svg"></object>
+
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <h2 id="popup-title" style="color: blue"></h2>
+      <p id="popup-message" style="color: green"></p>
+      <div class="popup-buttons">
+        <button id="yesButton" class="popup-button">Yes</button>
+        <button id="noButton" class="popup-button">No</button>
       </div>
     </div>
-    <script src="popup.js"></script>
-  </body>
+  </div>
+  <script src="popup.js"></script>
 </html>
