--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="#000000" data-react-helmet="true" name="theme-color" />
+    <meta name="title" content="Missile Game" />
     <meta
-      name="viewport"
-      content="width=device-width, height=device-height, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+      name="description"
+      content="Just a simple game about missiles, what could go wrong?"
     />
+
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="1 days" />
 
     <!--== CSS ==============================================================-->
     <style type="text/css">
@@ -716,9 +724,9 @@
 
     <!--== SCRIPTS ==============================================================-->
 
-    <!-- Kevin Lindsey's 2d geometry SVG library -->
-    <script type="application/javascript" src="lib/kevlindev/2D.js"></script>
-    <script type="application/javascript" src="lib/kevlindev/Path.js"></script>
+    <!-- 2d geometry SVG library -->
+    <script type="application/javascript" src="lib/2D.js"></script>
+    <script type="application/javascript" src="lib/Path.js"></script>
 
     <!-- Game files -->
     <script type="application/javascript" src="src/base.js"></script>
