--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Cluster Rush</title>
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./icon.jpg" />
     <style>
       /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
@@ -32,5 +32,16 @@
       console.log("If the file NG.mem returns a 404 error, that is ok!");
     </script>
     <script src="Release/UnityLoader.js"></script>
+    <div id="popup" class="popup">
+      <div class="popup-content">
+        <h2 id="popup-title" style="color: blue"></h2>
+        <p id="popup-message" style="color: green"></p>
+        <div class="popup-buttons">
+          <button id="yesButton" class="popup-button">Yes</button>
+          <button id="noButton" class="popup-button">No</button>
+        </div>
+      </div>
+    </div>
+    <script src="popup.js"></script>
   </body>
 </html>
