Formated and Updated the code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Pixel Gun Survival | 3kh0</title>
+    <title>Pixel Gun Survival</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <link rel="stylesheet" href="TemplateData/style.css" />
   </head>
@@ -65,7 +65,8 @@
         canvas.style.width = "870px";
         canvas.style.height = "570px";
       }
-      canvas.style.background = "url('" + buildUrl + "/Shooting.jpg') center / cover";
+      canvas.style.background =
+        "url('" + buildUrl + "/Shooting.jpg') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
@@ -86,6 +87,5 @@
       };
       document.body.appendChild(script);
     </script>
-    <script src="/js/main.js"></script>
   </body>
 </html>
