Formatted and Updated code

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Drive Mad | 3kh0</title>
+    <title>Drive Mad</title>
     <script type="text/javascript" src="Jump_Gamemonetize.js"></script>
-    <script src="/js/main.js"></script>
     <meta name="description" content="" />
     <meta name="google" content="notranslate" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <link rel="stylesheet" href="webapp/fancade.css" />
     <link rel="icon" href="webapp/cover.jpg" />
   </head>
@@ -27,11 +29,17 @@
             <div class="black">
               <img src="webapp/cover.jpg" class="cover" />
               <p class="title">Drive Mad</p>
-              <p class="author">Martin Magni</p>
             </div>
           </div>
         </div>
-        <div id="progress_or_play"><progress id="progress" class="loading" value="0" max="100"></progress></div>
+        <div id="progress_or_play">
+          <progress
+            id="progress"
+            class="loading"
+            value="0"
+            max="100"
+          ></progress>
+        </div>
         <p class="description"></p>
       </div>
       <canvas class="emscripten" id="canvas" tabindex="-1"></canvas>
@@ -42,4 +50,3 @@
     <script type="text/javascript" src="webapp/index.js"></script>
   </body>
 </html>
-<!-- Thanks EvilMonke#0263! -->
