Formatted and Updated code

--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui"
+    />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta charset="utf-8" />
     <meta name="MobileOptimized" content="width" />
     <meta name="HandheldFriendly" content="true" />
-    <title>Slope Ball | 3kh0</title>
-    <script type="application/javascript" src="/js/main.js"></script>
+    <title>Slope Ball</title>
     <link rel="stylesheet" href="files/game.css" type="text/css" />
     <link rel="shortcut icon" href="files/favicon.png" type="image/png" />
     <link rel="apple-touch-icon" href="files/favicon.png" type="image/png" />
-    <link rel="apple-touch-icon-precomposed" href="files/favicon.png" type="image/png" />
-    <link rel="apple-touch-startup-image" href="files/favicon.png" type="image/png" />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="files/favicon.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="files/favicon.png"
+      type="image/png"
+    />
   </head>
   <body>
     <div id="sg-orient-screen"></div>
@@ -46,6 +59,9 @@
         false
       );
     </script>
-    <script type="text/javascript" src="files/Slope.js?SJSAC=2098137795"></script>
+    <script
+      type="text/javascript"
+      src="files/Slope.js"
+    ></script>
   </body>
 </html>
