Formatted and Updated code

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Stack | 3kh0</title>
-    <link rel="icon" href="stack.png">
+    <title>Stack</title>
+    <link rel="icon" href="stack.png" />
     <script type="text/javascript">
       function disableselect(e) {
         return false;
@@ -633,6 +633,5 @@
       })();
       var game = new Game();
     </script>
-    <script type="application/javascript" src="/js/main.js"></script>
   </body>
 </html>
