--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/swag-api.css"
+      href="swag-api.css"
     />
     <script
       type="text/javascript"
-      src="/swag-api.js"
+      src="swag-api.js"
     ></script>
     <script type="text/javascript" src="./lib/clipboard.min.js"></script>
     <script type="text/javascript" src="./lib/howler.min.js"></script>
@@ -245,7 +245,7 @@
     );
   </script>
   <script
-    src="/inobounce.min.js"
+    src="inobounce.min.js"
     integrity="sha512-6lLl4/TF28QKaWUwQzDbb0aQRsVWQ8O5hp7gtCzm/EYZTR04AGsxoL1LzjHFTd7s6IAgzRTGsNe+TU+EoHtBYg=="
     crossorigin="anonymous"
   ></script>
