--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ user-scalable=no, minimum-scale=1.0, maximum-scale=1.01"
     <meta name="supports-ad-play-button" content="true" />
     <link
       rel="stylesheet"
-      href="/css/stylesheet.css"
+      href="./css/stylesheet.css"
       type="text/css"
       charset="utf-8"
     />
-    <script src="/js/custom-phaser.min.js"></script>
-    <script src="/js/game.min.js"></script>
+    <script src="./js/custom-phaser.min.js"></script>
+    <script src="./js/game.min.js"></script>
     <style>
       #focusHelper {
         width: 100vw;
@@ -51,7 +51,6 @@ user-scalable=no, minimum-scale=1.0, maximum-scale=1.01"
         document.getElementById("focusHelper").style["display"] = "none";
       });
     </script>
-    <script src="/js/scr.js"></script>
+    <script src="./js/scr.js"></script>
   </body>
 </html>
-]]>
