--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       type="text/css"
     />
 
-    <script src="/js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
     <script type="text/javascript" src="js/minesweeper.js"></script>
   </head>
