Updated speed button

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         </script>
     </div>
     <div id="dSpeedContainer">
-        <div class="title">At the request of players, the game speed adjustment function is especially introduced</div>
+        <div class="title">The game speed adjustment function.</div>
         <div class="dSpeed" title="Click on a speed to select soft acceleration">
             <div class="dS1">Click on the corresponding speed</div>
             <div class="dS2">
@@ -411,10 +411,6 @@
             </div>
         </div>
         <div class="nowspeed">Current game speed:<span id="dDisplaySpeed">1</span> Double speed</div>
-        <div class="content"><span>&nbsp;&nbsp;&nbsp; Speed Continue</span>: Ideally, the speed adjustment provided by the game is
-            <font color="#FFFF00">1/2 speed - 10 times speed</font>. But the speed Continue effect is related to your browser and computer. For example, IE6 browser can't be expected to be 10 times faster on a good computer.<br>&nbsp;&nbsp;&nbsp; After the speed adjustment,
-            the visual visual of the screen may occasionally feel a bit sluggish, and at relatively high speeds, some browsers may not be able to achieve the acceleration effect or can only accelerate for a short time and then slow down.<br>&nbsp;&nbsp;&nbsp;
-            <span style="color:#FF0"><b>Finally, it is strongly recommended to use IE9, Chrome, FireFox, Opera browsers, so that you can experience the feeling of a machine gun with a pea shooter！<br>&nbsp;&nbsp;&nbsp; Disclaimer: Limited by browsers and computers, this speed adjustment does not guarantee that the effect of the selected speed will be achieved!</b></span></div>
         <br>
         <div><input type="button" value="back to game" onclick="HiddenSpeed()">&nbsp;&nbsp; <input type="button" value="restore speed" onclick="CSpeed(1,10,1)"></div>
     </div>
