--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Rolling Forests</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="/icon.png" rel="icon" />
+    <link href="icon.png" rel="icon" />
   </head>
   <body id="body">
     <div id="game"></div>
