Fixed game booting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
   <body>
     <script>
+      var AT = {
+        // URL where an user will be redirected after clicking "Play" button on the Site lock screen
+        SITE_LOCK_TARGET: "//www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley/",
+      };
+
       var WebFontConfig = {
         classes: false,
         timeout: 0,
