--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
       </div>
       <canvas class="canvas"></canvas>
       <div class="loading-screen">
-        <span class="loading-text">Loading nate-games...</span>
+        <span class="loading-text">Loading...</span>
       </div>
       <div class="game-ui">
         <div class="params">
