Display in full screen

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       class="emscripten"
       id="canvas"
       oncontextmenu="event.preventDefault()"
-      height="720px"
-      width="1280px"
+      style="display: block; width: 100vw; height: 100vh"
     ></canvas>
     <script type="text/javascript">
       var Module = {
