Compressed code and added PWA support

--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Cluster Rush</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./icon.jpg" />
-    <style>
-      /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
-    </style>
-  </head>
-  <body>
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <canvas
-      class="emscripten"
-      id="canvas"
-      oncontextmenu="event.preventDefault()"
-      style="display: block; width: 100vw; height: 100vh"
-    ></canvas>
-    <script type="text/javascript">
-      var Module = {
-        TOTAL_MEMORY: 268435456,
-        errorhandler: null, // arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
-        compatibilitycheck: null,
-        backgroundColor: "#222C36",
-        splashStyle: "Dark",
-        dataUrl: "Release/NG.data",
-        codeUrl: "Release/NG.js",
-        asmUrl: "Release/NG.asm.js",
-        memUrl: "Release/NG.mem",
-      };
-      console.log("If the file NG.mem returns a 404 error, that is ok!");
-    </script>
-    <script src="popup.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Cluster Rush</title><link rel="stylesheet" href="style.css" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><style></style><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" style="display: block; width: 100vw; height: 100vh" ></canvas><script type="text/javascript">var Module={ TOTAL_MEMORY: 268435456, errorhandler: null, compatibilitycheck: null, backgroundColor: "#222C36", splashStyle: "Dark", dataUrl: "Release/NG.data", codeUrl: "Release/NG.js", asmUrl: "Release/NG.asm.js", memUrl: "Release/NG.mem",}; console.log("If the file NG.mem returns a 404 error, that is ok!"); </script><script src="popup.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
