Compressed code and added PWA support

--- a/index.html
+++ b/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Color Tunnel 2</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-    <link rel="stylesheet" href="TemplateData/style.css" />
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
-    <script>
-      var gameInstance = UnityLoader.instantiate(
-        "gameContainer",
-        "Build/ColorTunnel2-x1.json",
-        {
-          onProgress: UnityProgress,
-          Module: {
-            onRuntimeInitialized: function () {
-              UnityProgress(gameInstance, "complete");
-            },
-          },
-        }
-      );
-    </script>
-  </head>
-  <body
-    style="overflow: hidden; background: #000000; margin: 0px; padding: 0px"
-  >
-    <div class="webgl-content">
-      <div
-        id="gameContainer"
-        style="width: 960px; height: 600px; margin: auto"
-      ></div>
-      <!--<div class="footer">
-            <div class="webgl-logo"></div>
-            <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-            <div class="title">Color Tunnel 2</div>
-        </div>-->
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Color Tunnel 2</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="TemplateData/style.css" /><script src="TemplateData/UnityProgress.js"></script><script src="Build/UnityLoader.js"></script><script>var gameInstance=UnityLoader.instantiate( "gameContainer", "Build/ColorTunnel2-x1.json", { onProgress: UnityProgress, Module:{ onRuntimeInitialized: function (){ UnityProgress(gameInstance, "complete");},},} ); </script><link rel="stylesheet" href="toast.css" /></head><body style="overflow: hidden; background: #000000; margin: 0px; padding: 0px" ><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="webgl-content"><div id="gameContainer" style="width: 960px; height: 600px; margin: auto" ></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
