Compressed code and added PWA support

--- a/index.html
+++ b/index.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="icon" sizes="192x192" href="icon.jpeg" />
-    <link rel="shortcut icon" href="icon.jpeg" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="icon.jpeg" type="image/x-icon" />
-    <title>Evil Glitch</title>
-    <style>
-      body {
-        background: #000;
-        margin: 0;
-        padding: 0;
-      }
-      canvas {
-        cursor: none;
-        display: none;
-      }
-      #c {
-        height: 100vh;
-        margin: auto;
-        display: block;
-      }
-      #f {
-        font-family: monospace;
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        font-size: 21px;
-        color: #993;
-        text-decoration: none;
-      }
-      #f:hover {
-        color: #9aa;
-      }
-    </style>
-  </head>
-  <body allowfullscreen>
-    <div id="d">
-      <canvas id="c"></canvas><canvas id="g" moz-opaque></canvas>
-    </div>
-    <a href="#" id="f" title="fullscreen">FullScreen</a>
-    <script async src="b.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Evil Glitch</title><style>body{ background: #000; margin: 0; padding: 0;} canvas{ cursor: none; display: none;} #c{ height: 100vh; margin: auto; display: block;} #f{ font-family: monospace; position: absolute; bottom: 10px; left: 10px; font-size: 21px; color: #993; text-decoration: none;} #f:hover{ color: #9aa;} </style><link rel="stylesheet" href="toast.css" /></head><body allowfullscreen><div id="d"><canvas id="c"></canvas><canvas id="g" moz-opaque></canvas></div><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><a href="#" id="f" title="fullscreen">FullScreen</a><script async src="b.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
